--- a/charts/aws-credential-manager/templates/deployment.yaml
+++ b/charts/aws-credential-manager/templates/deployment.yaml
@@ -33,9 +33,9 @@ spec:
           image: "{{ include "image.registry" . }}/{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
-            - run
+            {{- toYaml .Values.args | nindent 12 }}
             - --metrics-bind-address=:8443
-            - --leader-elect
+            - --leader-elect=false
             - --health-probe-bind-address=:{{ .Values.service.port }}
           ports:
             - name: http
