--- a/charts/aws-credential-manager/templates/rbac.yaml
+++ b/charts/aws-credential-manager/templates/rbac.yaml
@@ -73,38 +73,6 @@ rules:
   - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: {{ include "aws-credential-manager.fullname" . }}:metrics-auth
-  labels:
-    {{- include "aws-credential-manager.labels" . | nindent 4 }}
-rules:
-- apiGroups:
-  - authentication.k8s.io
-  resources:
-  - tokenreviews
-  verbs:
-  - create
-- apiGroups:
-  - authorization.k8s.io
-  resources:
-  - subjectaccessreviews
-  verbs:
-  - create
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: {{ include "aws-credential-manager.fullname" . }}:metrics-reader
-  labels:
-    {{- include "aws-credential-manager.labels" . | nindent 4 }}
-rules:
-- nonResourceURLs:
-  - /metrics
-  verbs:
-  - get
----
-apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ include "aws-credential-manager.fullname" . }}:leader-election
@@ -144,7 +112,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "aws-credential-manager.fullname" . }}:metrics-auth
+  name: system:auth-delegator
 subjects:
 - kind: ServiceAccount
   name: {{ include "aws-credential-manager.serviceAccountName" . }}
