--- a/charts/aws-credential-manager/templates/serviceaccount.yaml
+++ b/charts/aws-credential-manager/templates/serviceaccount.yaml
@@ -1,8 +1,7 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "aws-credential-manager.serviceAccountName" . }}
+  name: aws-credential-manager
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "aws-credential-manager.labels" . | nindent 4 }}
